EPMRPP-99364 spring boot 3. new rest client